@@ -12,6 +12,10 @@ S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
+S3method(generateCalibrationData,BenchmarkResult)
+S3method(generateCalibrationData,Prediction)
+S3method(generateCalibrationData,ResampleResult)
+S3method(generateCalibrationData,list)
 S3method(generateROCRCurvesData,BenchmarkResult)
 S3method(generateROCRCurvesData,Prediction)
 S3method(generateROCRCurvesData,ResampleResult)
@@ -587,6 +591,7 @@ export(fpr)
 export(friedmanPostHocTestBMR)
 export(friedmanTestBMR)
 export(generateBenchmarkSummaryData)
+export(generateCalibrationData)
 export(generateCritDifferencesData)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
@@ -763,6 +768,7 @@ export(oversample)
 export(performance)
 export(plotBenchmarkResult)
 export(plotBenchmarkSummary)
+export(plotCalibration)
 export(plotCritDifferences)
 export(plotFilterValues)
 export(plotFilterValuesGGVIS)
