@@ -1,10 +1,11 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/generateThreshVsPerf.R
-\name{generateThreshVsPerfData}
-\alias{generateThreshVsPerfData}
-\title{Generate threshold vs. performance(s) for 2-class classification.}
+% Please edit documentation in R/generateCalibration.R
+\name{generateCalibrationData}
+\alias{generateCalibrationData}
+\title{Generate classifier calibration data.}
 \usage{
-generateThreshVsPerfData(obj, measures, gridsize = 100L, task.id = NULL)
+generateCalibrationData(obj, breaks = "Sturges", groups = NULL,
+  task.id = NULL)
 }
 \arguments{
 \item{obj}{[(list of) \code{\link{Prediction}} | (list of) \code{\link{ResampleResult}} | \code{\link{BenchmarkResult}}]\cr
@@ -13,33 +14,35 @@ In case of a list probably produced by different learners you want to compare, t
 name the list with the names you want to see in the plots, probably
 learner shortnames or ids.}
 
-\item{measures}{[\code{\link{Measure}} | list of \code{\link{Measure}}]\cr
-Performance measure(s) to evaluate.
-Default is the default measure for the task, see here \code{\link{getDefaultMeasure}}.}
+\item{breaks}{[\code{character(1)}] or [\code{numeric}]\cr
+If \code{character(1)}, the algorithm to use in generating probability bins.
+See \code{\link{hist}} for details.
+If \code{numeric}, the cut points for the bins.
+Default is \dQuote{Sturges}.}
 
-\item{gridsize}{[\code{integer(1)}]\cr
-Grid resolution for x-axis (threshold).
-Default is 100.}
+\item{groups}{[\code{integer(1)}]\cr
+The number of bins to construct.
+If specified, \code{breaks} is ignored.
+Default is \code{NULL}.}
 
 \item{task.id}{[\code{character(1)}]\cr
 Selected task in \code{\link{BenchmarkResult}} to do plots for, ignored otherwise.
 Default is first task.}
 }
 \description{
-Generate threshold vs. performance(s) for 2-class classification.
+Generate classifier calibration data.
 }
 \seealso{
+Other calibration: \code{\link{plotCalibration}}
+
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
-  \code{\link{generateCalibrationData}};
   \code{\link{generateCritDifferencesData}};
   \code{\link{generateFilterValuesData}};
   \code{\link{generateLearningCurveData}};
   \code{\link{generatePartialPredictionData}};
   \code{\link{generateROCRCurvesData}};
   \code{\link{generateRankMatrixAsBarData}};
+  \code{\link{generateThreshVsPerfData}};
   \code{\link{getFilterValues}}
-
-Other thresh_vs_perf: \code{\link{plotThreshVsPerfGGVIS}};
-  \code{\link{plotThreshVsPerf}}
 }
 
