@@ -85,6 +85,7 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{plotRankMatrixAsBar}}
 
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
+  \code{\link{generateCalibrationData}};
   \code{\link{generateFilterValuesData}};
   \code{\link{generateLearningCurveData}};
   \code{\link{generatePartialPredictionData}};
