@@ -46,6 +46,7 @@ Other filter: \code{\link{FilterValues}};
   \code{\link{plotFilterValues}}
 
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
+  \code{\link{generateCalibrationData}};
   \code{\link{generateCritDifferencesData}};
   \code{\link{generateLearningCurveData}};
   \code{\link{generatePartialPredictionData}};
