@@ -51,6 +51,7 @@ plotLearningCurve(r)
 }
 \seealso{
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
+  \code{\link{generateCalibrationData}};
   \code{\link{generateCritDifferencesData}};
   \code{\link{generateFilterValuesData}};
   \code{\link{generatePartialPredictionData}};
