@@ -81,6 +81,7 @@ plotPartialPrediction(pd)
 }
 \seealso{
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
+  \code{\link{generateCalibrationData}};
   \code{\link{generateCritDifferencesData}};
   \code{\link{generateFilterValuesData}};
   \code{\link{generateLearningCurveData}};
