@@ -50,6 +50,7 @@ See these methods in ROCR for further info.
 }
 \seealso{
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
+  \code{\link{generateCalibrationData}};
   \code{\link{generateCritDifferencesData}};
   \code{\link{generateFilterValuesData}};
   \code{\link{generateLearningCurveData}};
