@@ -70,6 +70,7 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{plotRankMatrixAsBar}}
 
 Other generate_plot_data: \code{\link{generateBenchmarkSummaryData}};
+  \code{\link{generateCalibrationData}};
   \code{\link{generateCritDifferencesData}};
   \code{\link{generateFilterValuesData}};
   \code{\link{generateLearningCurveData}};
