@@ -76,6 +76,7 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{plotRankMatrixAsBar}}
 
 Other plot: \code{\link{plotBenchmarkSummary}};
+  \code{\link{plotCalibration}};
   \code{\link{plotCritDifferences}};
   \code{\link{plotFilterValuesGGVIS}};
   \code{\link{plotFilterValues}};
