@@ -63,6 +63,7 @@ Other benchmark: \code{\link{BenchmarkResult}};
   \code{\link{plotRankMatrixAsBar}}
 
 Other plot: \code{\link{plotBenchmarkResult}};
+  \code{\link{plotCalibration}};
   \code{\link{plotCritDifferences}};
   \code{\link{plotFilterValuesGGVIS}};
   \code{\link{plotFilterValues}};
