@@ -38,6 +38,7 @@ Other filter: \code{\link{FilterValues}};
 
 Other plot: \code{\link{plotBenchmarkResult}};
   \code{\link{plotBenchmarkSummary}};
+  \code{\link{plotCalibration}};
   \code{\link{plotCritDifferences}};
   \code{\link{plotFilterValues}};
   \code{\link{plotLearningCurveGGVIS}};
