@@ -32,6 +32,7 @@ Other partial_prediction: \code{\link{generatePartialPredictionData}};
 
 Other plot: \code{\link{plotBenchmarkResult}};
   \code{\link{plotBenchmarkSummary}};
+  \code{\link{plotCalibration}};
   \code{\link{plotCritDifferences}};
   \code{\link{plotFilterValuesGGVIS}};
   \code{\link{plotFilterValues}};
