@@ -41,6 +41,7 @@ plotThreshVsPerf(pvs)
 \seealso{
 Other plot: \code{\link{plotBenchmarkResult}};
   \code{\link{plotBenchmarkSummary}};
+  \code{\link{plotCalibration}};
   \code{\link{plotCritDifferences}};
   \code{\link{plotFilterValuesGGVIS}};
   \code{\link{plotFilterValues}};
